--- a/src/components/Project/style.scss
+++ b/src/components/Project/style.scss
@@ -33,7 +33,7 @@
                  background: lighten($color: red, $amount: 4);
                  position: relative;
                  img {
-                     max-height: 100%;
+                     height: 100%;
                      width: 100%;
                      margin-bottom: 0px;
 
@@ -46,15 +46,12 @@
 
              }
              footer {
-                 display: flex;
-                 flex-direction: column;
-                 justify-content: center;
-                 padding: 10px 30px;
-                 max-height: 30%;
+                 min-height: 30%;
+                 padding-left: 30px;
+                 padding-top: 20px;
                  position: relative;
-                //  background: red;
-                h3 {
-                    margin-bottom: 0;
+                h4 {
+                    margin-bottom: 5px;
                 }
                  a {
                      color: black;
